V 0.600 Partner Contracts Management

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -16,7 +16,11 @@
     "member": "Member",
     "contracts": "Contracts",
     "photoGallery": "Photo Gallery",
-    "archivedContracts": "Archived Contracts"
+    "archivedContracts": "Archived Contracts",
+    "planFeatures": "Plan Features",
+    "pricingPlans": "Pricing Plans", 
+    "partnerContracts": "Partner Contracts",
+    "discountCodes": "Discount Codes"
   },
   "customers": {
     "title": "Customers",
@@ -274,6 +278,21 @@
     "totalPartners": "Total Partners",
     "activeLocations": "Active Locations", 
     "totalUsers": "Total Users",
+    "totalCustomers": "Total Customers",
+    "activeContracts": "Active Contracts",
+    "activeBookings": "Active Bookings",
+    "businessOverview": "Business Overview",
+    "contractsAnalytics": "Contracts Analytics",
+    "contractsAnalyticsSubtitle": "Last 4 months and next 8 months - contracts by type",
+    "resourcesOverview": "Available Resources",
+    "desks": "Desks",
+    "meetingRooms": "Meeting Rooms",
+    "allLocations": "All locations",
+    "total": "Total",
+    "available": "Available",
+    "booked": "Booked",
+    "occupancy": "Occupancy",
+    "loadingData": "Loading data...",
     "monthlyOverview": "Monthly Overview",
     "quickActions": "Quick Actions",
     "contractsOverview": "Your Contracts",
@@ -292,7 +311,10 @@
     "renewNow": "RENEW NOW",
     "noActiveContracts": "You have no active contracts",
     "getStarted": "Get Started",
-    "freeTrialActive": "Free Trial active - not renewable"
+    "freeTrialActive": "Free Trial active - not renewable",
+    "totalContractValue": "Total Contract Value",
+    "subscriptions": "Subscriptions",
+    "packages": "Packages"
   },
   "partners": {
     "title": "Partners",
@@ -392,7 +414,11 @@
     "confirmDelete": "Confirm Delete",
     "updating": "Updating...",
     "yes": "Yes",
-    "no": "No"
+    "no": "No",
+    "all": "All",
+    "warning": "Warning",
+    "add": "Add",
+    "remove": "Remove"
   },
   "messages": {
     "signedInSuccessfully": "Signed in successfully",
@@ -475,7 +501,50 @@
     "autoRenewEnabled": "Auto-renewal enabled",
     "autoRenewDisabled": "Auto-renewal disabled",
     "errorUpdatingAutoRenew": "Error updating auto-renewal",
-    "bookingConfirmedSuccessfully": "Reservation confirmed successfully"
+    "bookingConfirmedSuccessfully": "Reservation confirmed successfully",
+    "errorLoadingFeatures": "Error loading features",
+    "featureCreatedSuccessfully": "Feature created successfully",
+    "featureUpdatedSuccessfully": "Feature updated successfully",
+    "featureDeletedSuccessfully": "Feature deleted successfully",
+    "errorCreatingFeature": "Error creating feature",
+    "errorUpdatingFeature": "Error updating feature", 
+    "errorDeletingFeature": "Error deleting feature",
+    "featureNameRequired": "Feature name is required",
+    "featureKeyRequired": "Feature key is required",
+    "featureKeyInvalid": "Feature key must contain only lowercase letters, numbers, and underscores",
+    "featureKeyExists": "A feature with this key already exists",
+    "numericValueRequired": "Default value must be a valid number for numeric features",
+    "errorLoadingPricingPlans": "Error loading pricing plans",
+    "pricingPlanCreatedSuccessfully": "Pricing plan created successfully",
+    "pricingPlanUpdatedSuccessfully": "Pricing plan updated successfully",
+    "pricingPlanDeletedSuccessfully": "Pricing plan deleted successfully",
+    "errorCreatingPricingPlan": "Error creating pricing plan",
+    "errorUpdatingPricingPlan": "Error updating pricing plan",
+    "errorDeletingPricingPlan": "Error deleting pricing plan",
+    "planNameRequired": "Plan name is required",
+    "planNameExists": "A plan with this name already exists",
+    "validTrialDurationRequired": "Valid trial duration is required",
+    "validMonthlyPriceRequired": "Valid monthly price is required",
+    "validYearlyPriceRequired": "Valid yearly price is required",
+    "featureAlreadyAssigned": "This feature is already assigned to this plan",
+    "errorAddingFeature": "Error adding feature",
+    "errorRemovingFeature": "Error removing feature",
+    "featureAddedSuccessfully": "Feature added successfully",
+    "featureRemovedSuccessfully": "Feature removed successfully",
+    "errorLoadingDiscountCodes": "Error loading discount codes",
+    "discountCodeCreatedSuccessfully": "Discount code created successfully",
+    "discountCodeUpdatedSuccessfully": "Discount code updated successfully",
+    "discountCodeDeletedSuccessfully": "Discount code deleted successfully",
+    "errorCreatingDiscountCode": "Error creating discount code",
+    "errorUpdatingDiscountCode": "Error updating discount code",
+    "errorDeletingDiscountCode": "Error deleting discount code",
+    "partnerContractCreatedSuccessfully": "Partner contract created successfully",
+    "partnerContractUpdatedSuccessfully": "Partner contract updated successfully",
+    "partnerContractDeletedSuccessfully": "Partner contract deleted successfully",
+    "errorLoadingPartnerContracts": "Error loading partner contracts",
+    "errorCreatingPartnerContract": "Error creating partner contract",
+    "errorUpdatingPartnerContract": "Error updating partner contract",
+    "errorDeletingPartnerContract": "Error deleting partner contract"
   },
   "services": {
     "title": "Services",
@@ -1034,6 +1103,332 @@
     "getStarted": "Get Started",
     "continueSetup": "Continue Setup",
     "viewDashboard": "Go to Dashboard"
+  },
+  "planFeatures": {
+    "title": "Plan Features",
+    "subtitle": "Manage the catalog of features available in pricing plans",
+    "addFeature": "Add Feature",
+    "editFeature": "Edit Feature",
+    "addFirstFeature": "Add First Feature",
+    "featureName": "Feature Name",
+    "featureKey": "Feature Key",
+    "featureDescription": "Description",
+    "featureType": "Feature Type",
+    "featureCategory": "Category",
+    "defaultValue": "Default Value",
+    "displayOrder": "Display Order",
+    "isActive": "Active",
+    "actions": "Actions",
+    "noFeaturesFound": "No features found. Add your first feature to get started.",
+    "totalFeatures": "Total Features",
+    "activeFeatures": "Active Features",
+    "categoriesCount": "Categories",
+    "featureTypes": {
+      "boolean": "Boolean (Yes/No)",
+      "numeric": "Numeric (Number)", 
+      "text": "Text (String)"
+    },
+    "categories": {
+      "limits": "Limits",
+      "integrations": "Integrations",
+      "access_control": "Access Control",
+      "support": "Support",
+      "storage": "Storage",
+      "analytics": "Analytics"
+    },
+    "basicInformation": "Basic Information",
+    "featureSettings": "Feature Settings",
+    "keyHelp": "Unique identifier used in code (e.g., max_locations, wifi_management)",
+    "categoryHelp": "Group features for better organization in the UI",
+    "orderHelp": "Order in which features appear in lists (lower numbers first)",
+    "examples": {
+      "boolean": "wifi_management, door_automation, analytics_enabled",
+      "numeric": "max_locations, max_users, storage_gb_limit",
+      "text": "support_level, backup_frequency, integration_tier"
+    }
+  },
+  "pricingPlans": {
+    "title": "Pricing Plans",
+    "subtitle": "Create and manage subscription plans for your platform",
+    "addPlan": "Add Plan",
+    "editPlan": "Edit Plan",
+    "addFirstPlan": "Add First Plan",
+    "totalPlans": "Total Plans",
+    "activePlans": "Active Plans",
+    "trialPlans": "Trial Plans",
+    "noPlansFound": "No pricing plans found. Create your first plan to get started.",
+    "planName": "Plan Name",
+    "planDescription": "Plan Description",
+    "planStatus": "Plan Status",
+    "planType": "Plan Type",
+    "isTrialPlan": "This is a trial plan",
+    "trialPlanHelp": "Trial plans are free and have a limited duration",
+    "trialDuration": "Trial Duration",
+    "trialDurationHelp": "Number of days the trial will last",
+    "pricing": "Pricing",
+    "monthlyPrice": "Monthly Price",
+    "yearlyPrice": "Yearly Price",
+    "pricingPreview": "Pricing Preview",
+    "monthlyTotal": "Monthly (×12)",
+    "yearlySavings": "Yearly Savings",
+    "off": "off",
+    "basicInformation": "Basic Information",
+    "active": "Active",
+    "inactive": "Inactive",
+    "archived": "Archived",
+    "trial": "Trial",
+    "freeTrial": "Free Trial",
+    "days": "days",
+    "monthly": "Monthly",
+    "yearly": "Yearly",
+    "month": "month",
+    "year": "year",
+    "save": "Save",
+    "featuresIncluded": "features included",
+    "viewFeatures": "View Features",
+    "manageFeatures": "Manage Features",
+    "manageFeaturesFor": "Manage Features for",
+    "addFeature": "Add Feature",
+    "selectFeature": "Select a feature",
+    "assignedFeatures": "Assigned Features",
+    "noFeaturesAssigned": "No features assigned to this plan yet",
+    "removeFeature": "Remove Feature",
+    "currency": "Currency"
+  },
+  "partnerContracts": {
+    "title": "Partner Contracts",
+    "subtitle": "Manage contracts and agreements with your partners",
+    "addContract": "Add Contract",
+    "addFirstContract": "Add First Contract",
+    "editContract": "Edit Contract",
+    "contractDetails": "Contract Details",
+    "noContractsFound": "No contracts found",
+    "totalContracts": "Total Contracts",
+    "activeContracts": "Active Contracts",
+    "monthlyContracts": "Monthly Contracts",
+    "monthlyRevenue": "Monthly Revenue",
+    "contract": "Contract",
+    "contractNumber": "Contract Number",
+    "partner": "Partner",
+    "selectPartner": "Select a partner",
+    "partnerRequired": "Please select a partner",
+    "plan": "Plan",
+    "pricingPlan": "Pricing Plan",
+    "selectPlan": "Select a plan",
+    "planRequired": "Please select a pricing plan",
+    "planDetails": "Plan Details",
+    "planName": "Plan Name",
+    "monthlyPrice": "Monthly Price",
+    "yearlyPrice": "Yearly Price",
+    "trialDuration": "Trial Duration",
+    "billing": "Billing",
+    "billingFrequency": "Billing Frequency",
+    "monthly": "Monthly",
+    "yearly": "Yearly",
+    "amount": "Amount",
+    "basePrice": "Base Price",
+    "discount": "Discount",
+    "finalPrice": "Final Price",
+    "discountCode": "Discount Code",
+    "noDiscount": "No discount",
+    "pricingSummary": "Pricing Summary",
+    "period": "Period",
+    "contractPeriod": "Contract Period",
+    "startDate": "Start Date",
+    "startDateRequired": "Start date is required",
+    "endDate": "End Date",
+    "endDateRequired": "End date is required",
+    "endDateMustBeAfterStartDate": "End date must be after start date",
+    "status": "Status",
+    "contractStatus": "Contract Status",
+    "active": "Active",
+    "inactive": "Inactive",
+    "draft": "Draft",
+    "expired": "Expired",
+    "cancelled": "Cancelled",
+    "suspended": "Suspended",
+    "autoRenew": "Auto Renew",
+    "autoRenewHelp": "Automatically renew the contract when it expires",
+    "partnerAndPlan": "Partner & Plan",
+    "billingAndDiscount": "Billing & Discount",
+    "additionalInformation": "Additional Information",
+    "contractTerms": "Contract Terms",
+    "notes": "Notes",
+    "actions": "Actions",
+    "viewPayments": "View Payments",
+    "viewContract": "View Contract",
+    "deleteContract": "Delete Contract",
+    "confirmDeleteContract": "Confirm Delete Contract",
+    "deleteWarning": "Are you sure you want to delete this contract?",
+    "deleteContractWarning": "This action cannot be undone and will affect the partner's platform access.",
+    "contractCreatedSuccessfully": "Contract created successfully",
+    "contractUpdatedSuccessfully": "Contract updated successfully",
+    "contractDeletedSuccessfully": "Contract deleted successfully",
+    "errorCreatingContract": "Error creating contract",
+    "errorUpdatingContract": "Error updating contract",
+    "errorDeletingContract": "Error deleting contract",
+    "errorLoadingContracts": "Error loading contracts",
+    "partnerAlreadyHasActiveContract": "This partner already has an active contract",
+    "paymentHistory": "Payment History",
+    "paymentHistoryFor": "Payment History for",
+    "contractSummary": "Contract Summary",
+    "totalPaid": "Total Paid",
+    "outstanding": "Outstanding",
+    "totalPayments": "Total Payments",
+    "noPaymentsFound": "No payments found for this contract",
+    "recordPayment": "Record Payment",
+    "addPayment": "Add Payment",
+    "paymentPeriod": "Payment Period",
+    "paymentAmount": "Payment Amount",
+    "paymentStatus": "Payment Status",
+    "paid": "Paid",
+    "pending": "Pending",
+    "failed": "Failed",
+    "overdue": "Overdue",
+    "dueDate": "Due Date",
+    "paidDate": "Paid Date",
+    "paymentDate": "Payment Date",
+    "paymentMethod": "Payment Method",
+    "bankTransfer": "Bank Transfer",
+    "creditCard": "Credit Card",
+    "paypal": "PayPal",
+    "stripe": "Stripe",
+    "cash": "Cash",
+    "other": "Other",
+    "transactionRef": "Transaction Reference",
+    "transactionReference": "Transaction Reference",
+    "paymentProgress": "Payment Progress",
+    "nextPayment": "Next Payment",
+    "nextDueDate": "Next Due Date",
+    "paymentSchedule": "Payment Schedule",
+    "generateInvoice": "Generate Invoice",
+    "downloadInvoice": "Download Invoice",
+    "markAsPaid": "Mark as Paid",
+    "markAsPending": "Mark as Pending",
+    "editPayment": "Edit Payment",
+    "deletePayment": "Delete Payment",
+    "confirmDeletePayment": "Confirm Delete Payment",
+    "deletePaymentWarning": "This will permanently delete the payment record. This action cannot be undone.",
+    "paymentDeletedSuccessfully": "Payment deleted successfully",
+    "paymentUpdatedSuccessfully": "Payment updated successfully",
+    "paymentCreatedSuccessfully": "Payment recorded successfully",
+    "errorCreatingPayment": "Error recording payment",
+    "errorUpdatingPayment": "Error updating payment",
+    "errorDeletingPayment": "Error deleting payment",
+    "errorLoadingPayments": "Error loading payment history",
+    "currency": "Currency",
+    "renewalDate": "Renewal Date",
+    "expirationDate": "Expiration Date",
+    "daysRemaining": "Days Remaining",
+    "daysOverdue": "Days Overdue",
+    "contractValue": "Contract Value",
+    "totalRevenue": "Total Revenue",
+    "averageContractValue": "Average Contract Value",
+    "renewalRate": "Renewal Rate",
+    "churnRate": "Churn Rate",
+    "monthlyRecurringRevenue": "Monthly Recurring Revenue",
+    "annualRecurringRevenue": "Annual Recurring Revenue",
+    "exportContracts": "Export Contracts",
+    "exportPayments": "Export Payments",
+    "filterByStatus": "Filter by Status",
+    "filterByPlan": "Filter by Plan",
+    "filterByPartner": "Filter by Partner",
+    "sortBy": "Sort by",
+    "sortByDate": "Sort by Date",
+    "sortByAmount": "Sort by Amount",
+    "sortByStatus": "Sort by Status",
+    "ascending": "Ascending",
+    "descending": "Descending",
+    "contractHistory": "Contract History",
+    "paymentReminder": "Payment Reminder",
+    "sendReminder": "Send Reminder",
+    "reminderSent": "Reminder sent successfully",
+    "errorSendingReminder": "Error sending reminder",
+    "bulkActions": "Bulk Actions",
+    "selectAll": "Select All",
+    "deselectAll": "Deselect All",
+    "bulkDelete": "Delete Selected",
+    "bulkExport": "Export Selected",
+    "itemsSelected": "items selected",
+    "noItemsSelected": "No items selected",
+    "recordFirstPayment": "Record First Payment",
+    "periodStart": "Period Start",
+    "periodEnd": "Period End",
+    "paymentPeriodStartRequired": "Payment period start is required",
+    "paymentPeriodEndRequired": "Payment period end is required",
+    "validAmountRequired": "Valid amount is required",
+    "dueDateRequired": "Due date is required",
+    "amountPreview": "Amount Preview",
+    "paymentDetails": "Payment Details",
+    "transactionReferenceHelp": "Leave empty to auto-generate for paid status",
+    "confirmDeletePaymentRecord": "Are you sure you want to delete this payment record?",
+    "actionCannotBeUndone": "This action cannot be undone.",
+    "partnerContract": "Partner Contract",
+    "partnerInfo": "Partner Information", 
+    "pricingDetails": "Pricing Details",
+    "planType": "Plan Type",
+    "paymentTerms": "Payment Terms",
+    "billingCycle": "Billing Cycle",
+    "contractFooter": "This document represents the partnership contract. For changes contact administration.",
+    "generatedOn": "Generated on",
+    "statusActive": "Active",
+    "statusInactive": "Inactive", 
+    "statusPending": "Pending",
+    "statusExpired": "Expired",
+    "statusCancelled": "Cancelled",
+    "statusSuspended": "Suspended",
+    "statusDraft": "Draft",
+    "autoRenewEnabled": "Auto renewal enabled",
+    "autoRenewDisabled": "Auto renewal disabled"
+  },
+  "discountCodes": {
+    "title": "Discount Codes",
+    "subtitle": "Manage discount codes for partner contracts",
+    "addCode": "Add Discount Code",
+    "addFirstCode": "Add First Discount Code",
+    "editCode": "Edit Discount Code",
+    "deleteCode": "Delete Discount Code",
+    "noCodesFound": "No discount codes found",
+    "totalCodes": "Total Codes",
+    "activeCodes": "Active Codes",
+    "totalUsage": "Total Usage",
+    "code": "Code",
+    "discount": "Discount",
+    "discountType": "Discount Type",
+    "discountValue": "Discount Value",
+    "percentage": "Percentage",
+    "fixedAmount": "Fixed Amount",
+    "validity": "Validity",
+    "validFrom": "Valid From",
+    "validUntil": "Valid Until",
+    "usage": "Usage",
+    "usageLimit": "Usage Limit",
+    "usageCount": "Usage Count",
+    "status": "Status",
+    "actions": "Actions",
+    "active": "Active",
+    "inactive": "Inactive",
+    "expired": "Expired",
+    "scheduled": "Scheduled",
+    "usedUp": "Used Up",
+    "unknown": "Unknown",
+    "description": "Description",
+    "basicInfo": "Basic Information",
+    "discountSettings": "Discount Settings",
+    "usageSettings": "Usage Settings",
+    "isActive": "Is Active",
+    "isActiveHelp": "Inactive codes cannot be used in contracts",
+    "generate": "Generate",
+    "codeRequired": "Discount code is required",
+    "validDiscountValueRequired": "Valid discount value is required",
+    "percentageMax100": "Percentage discount cannot exceed 100%",
+    "validFromRequired": "Valid from date is required",
+    "validUntilRequired": "Valid until date is required",
+    "endDateMustBeAfterStartDate": "End date must be after start date",
+    "codeAlreadyExists": "This discount code already exists",
+    "percentageHelp": "Enter percentage (0-100)",
+    "fixedAmountHelp": "Enter fixed amount in USD",
+    "usageLimitHelp": "Leave empty for unlimited usage"
   },
   "app": {
     "appName": "Coworking Management",
