--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -102,6 +102,7 @@
     "customerDeactivatedSuccessfully": "Customer deactivated successfully and removed from list",
     "errorDeletingCustomer": "Error deleting customer",
     "errorDeactivatingCustomer": "Error deactivating customer",
+    "incomplete_profile": "Incomplete Profile",
     "constraints": {
       "activeBookings": "{{count}} active booking(s)",
       "activeContracts": "{{count}} active contract(s)",
